Modified PostServiceImpl and classes dependent on PostServiceImpl